# zhiyupai

./: .gitignore  README.md  README_UPDATE_MONGODB.md  add_sleep_data_for_admin.py  check_autoencoder_params.py  check_database.py  config.py  create_indexes.py  debug_register.py  demo_model_loading.py  docker-compose.yml  fix_duplicate_key_error.py  generate_test_accounts.py  generated_test_accounts.txt  import wfdb.py  manage.py  migrate_mongodb_to_docker.py  models.py  mongo-init.js  predict_mit_data.py  pyproject.toml  pyrightconfig.json  requirements.txt  setup_docker_mirror.ps1  setup_docker_mirror_detailed.ps1  simple_account_generator.py  test1.py  test_api_connection.py  test_auth_api.py  test_frontend_register.py  test_mongo_connection.py  test_mongodb.py  test_phone_login.py  test_sleep_data_structure.py  test_username_health_data.py  train_pyod_model.py  train_pyod_model_backup.py  update_mongo_schema.py  update_sleep_data_structure.py  verify_config.py  (+2 more)
api/: wearable_device_api.py
health_app/: sleep_views.py  urls.py  views.py
health_monitoring/: heart_rate_monitor.py
models/: best_threshold.txt
mongo_backup/20250826_204916/: user_profiles_backup.json  wearable_data_backup.json
mongo_backup/backup_20250826_162001/: metadata.json
mongo_backup/backup_20250826_162001/user_profiles/: documents.json
recommendation/: sleep_activity_model.py
static/js/: chart.umd.min.js
templates/: index.html  sleep_analysis.html
user_app/: backends.py  permissions.py  urls.py  views.py
zhiyupai_project/: asgi.py  middleware.py  settings.py  urls.py  wsgi.py
(+1 files in other folders)
