[tool.pyright]
include = ["."]
exclude = ["**/node_modules", "**/__pycache__", ".git", ".venv", "venv"]
reportMissingImports = "none"
reportMissingTypeStubs = false
reportGeneralTypeIssues = "none"
reportOptionalMemberAccess = "none"
reportOptionalSubscript = "none"
reportPrivateImportUsage = "none"
reportUnknownMemberType = "none"
reportUnknownParameterType = "none"
reportUnknownVariableType = "none"
reportUnknownArgumentType = "none"
reportUnknownLambdaType = "none"
reportUntypedFunctionDecorator = "none"
reportUntypedClassDecorator = "none"
reportUntypedBaseClass = "none"
reportUntypedNamedTuple = "none"
reportPrivateUsage = "none"
reportTypeCommentUsage = "none"
reportIncompatibleMethodOverride = "none"
reportIncompatibleVariableOverride = "none"
reportInconsistentConstructor = "none"
pythonVersion = "3.8"
pythonPlatform = "Windows"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zhiyupai"
version = "2.0.0"
description = "智愈派健康管理系统"
requires-python = ">=3.8"
dependencies = [
    "Django>=4.2.0",
    "djangorestframework>=3.14.0",
    "pymongo>=4.0.0",
    "PyJWT>=2.4.0",
    "python-decouple>=3.6",
    "djangorestframework-simplejwt>=5.2.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.2.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "pyod>=1.1.0",
    "lightgbm>=3.3.0",
    "wfdb>=4.1.0",
    "requests>=2.28.0",
    "gunicorn>=20.1.0",
    "whitenoise>=6.4.0"
]